Added simple model caching

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(getMetric)
 export(greedOptAUC)
 export(greedOptRMSE)
 export(safeOptAUC)
+export(evalEnsemble)
 import(caret)
 import(ggplot2)
 import(grid)
